Replace ArrayList with ArrayDeque in ShardReplicationChangesTracker
`remove(0)` on a `ArrayList` is `O(n)` because it shifts data around. On
a `ArrayDeque` it is `O(1)`

This also removes the synchronization. On a first glance if there were
concurrent access the existing subsequent `isEmpty` checks looked
suspicious but as far as I can tell the `missingBatches` collection is
never accessed from multiple threads at the same time. There may be
context switches due to the scheduled `Runnable`, but only one thread is
running the tracker logic at a time.